--- a/app/resources/style.qss
+++ b/app/resources/style.qss
@@ -6,7 +6,7 @@ QMainWindow {
 QPushButton {
     background-color:rgba(44, 55, 149, 0.36);
     color:rgb(29, 43, 55);
-    padding: 5px;
+    padding: 0px;
     min-width: 100px; 
     max-width: 500px;
     min-height: 200px; 
@@ -18,4 +18,14 @@ QPushButton {
 
 QPushButton:hover {
     background-color: #005a9e;
+}
+
+.logoLabel {
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 2px solid #0078d7;
+    border-radius: 65px;
+    padding: 10px;
+    max-width: 150px;
+    max-height: 150px;
+    
 }
